--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,13 +4,19 @@ services:
   web:
     build: .
     ports:
-      - "${WEB_PORT}:5000" 
+      - "${WEB_PORT}:5000"
     env_file:
       - .env
     depends_on:
       - redis
+    networks:
+      - internal_net
 
   redis:
     image: redis:7-alpine
-    ports:
-      - "${REDIS_PORT}:6379"
+    networks:
+      - internal_net
+
+networks:
+  internal_net:
+    driver: bridge
